--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Spicy Lime Grilled Shrimp</h1>
         <a href="../index.html">Home page</a>
+        <img src="https://www.allrecipes.com/thmb/EJ_UEIynHWGQ2Iel-WC2p3UK9m8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8049679-5a83fd579ba5493bbb7630805d509c01.jpg" alt="spicy-lime-grilled-shrimp">
     </body>
 </html>
