Add recipe ingredients through an unordered list

--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -12,6 +12,12 @@
         <p>Cajun seasoning and lime juice give plain grilled shrimp an upgrade. 
             This would be the perfect pairing for some lemon basmati rice for a zesty summertime meal.
         </p>
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 tablespoons Cajun seasoning (such as Emeril's Essence)</li>
+            <li>1 lime, juiced</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>1 pound peeled and deveined medium shrimp (30-40 per pound)</li>
+        </ul>
     </body>
 </html>
