--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -19,5 +19,12 @@
             <li>1 tablespoon vegetable oil</li>
             <li>1 pound peeled and deveined medium shrimp (30-40 per pound)</li>
         </ul>
+        <h3>Directions</h3>
+        <ol>
+            <li>Mix together Cajun seasoning, lime juice, and oil in a resealable plastic bag. Add shrimp, coat with marinade, squeeze out excess air, and seal the bag. Marinate in the refrigerator for 20 minutes.</li>>
+            <li>Preheat an outdoor grill for medium heat and lightly oil the grate.</li>
+            <li>Remove shrimp from marinade; shake off excess. Discard remaining marinade.</li>
+            <li>Cook shrimp on the preheated grill until bright pink on the outside and the meat is no longer transparent in the center, about 2 minutes per side.</li>
+        </ol>
     </body>
 </html>
