--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin recipes</h1>
         <a href="recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a>
+        <a href="recipes/parchment-baked-salmon.html">Parchment Baked Salmon</a>
+        <a href="recipes/pistachio-hummus.html">Pistachio Hummus</a>
     </body>
 </html>
