Organize the links into list

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin recipes</h1>
-        <a href="recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a>
-        <a href="recipes/parchment-baked-salmon.html">Parchment Baked Salmon</a>
-        <a href="recipes/pistachio-hummus.html">Pistachio Hummus</a>
+        <ul>
+            <li><a href="recipes/spicy-lime-grilled-shrimp.html">Spicy Lime Grilled Shrimp</a></li>
+            <li><a href="recipes/parchment-baked-salmon.html">Parchment Baked Salmon</a></li>
+            <li><a href="recipes/pistachio-hummus.html">Pistachio Hummus</a></li>
+        </ul>
     </body>
 </html>
