Make the image smaller

--- a/recipes/parchment-baked-salmon.html
+++ b/recipes/parchment-baked-salmon.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Parchment baked salmon</h1>
         <a href="../index.html">Home page</a>
-        <img src="https://www.allrecipes.com/thmb/jbd9tayRugG1mf2M3JkFkanBY2s=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1475161_Parchment-Baked-Salmon_229032_Photo-by-Deb-C-2000-004d7f3da84d4142bf9eb236ee6f12dd.jpg" alt="1475161_Parchment-Baked-Salmon">
+        <img src="https://www.allrecipes.com/thmb/jbd9tayRugG1mf2M3JkFkanBY2s=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1475161_Parchment-Baked-Salmon_229032_Photo-by-Deb-C-2000-004d7f3da84d4142bf9eb236ee6f12dd.jpg" alt="1475161_Parchment-Baked-Salmon" width="500" height="400">
         <h2>Cooking salmon in parchment paper is the best way to steam with great taste.</h2>
         <p>Wrapping your salmon in parchment paper is a great way to keep it moist and flavorful. 
             Take it from reviewer Bibi who says, "Don't be afraid to bake salmon in parchment. 
