Make the image smaller and Maintain aspect ratio

--- a/recipes/spicy-lime-grilled-shrimp.html
+++ b/recipes/spicy-lime-grilled-shrimp.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Spicy Lime Grilled Shrimp</h1>
         <a href="../index.html">Home page</a>
-        <img src="https://www.allrecipes.com/thmb/EJ_UEIynHWGQ2Iel-WC2p3UK9m8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8049679-5a83fd579ba5493bbb7630805d509c01.jpg" alt="spicy-lime-grilled-shrimp">
+        <img src="https://www.allrecipes.com/thmb/EJ_UEIynHWGQ2Iel-WC2p3UK9m8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8049679-5a83fd579ba5493bbb7630805d509c01.jpg" alt="spicy-lime-grilled-shrimp" width="500">
         <h2>Grilled shrimp with a lime base and some kick!</h2>
         <p>Cajun seasoning and lime juice give plain grilled shrimp an upgrade. 
             This would be the perfect pairing for some lemon basmati rice for a zesty summertime meal.
