Make the image smaller and Maintain aspect ratio

--- a/recipes/pistachio-hummus.html
+++ b/recipes/pistachio-hummus.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Pistachio Hummus</h1>
         <a href="../index.html">Home page</a>
-        <img src="https://www.allrecipes.com/thmb/mosdA6txKjRc0Sj7Y7Ma3Ti_DlU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11680823_Pistachio-Hummus_TheDailyGourmet_4x3-c14ee4d7b54e43c1876ddd08ad3bf2e9.jpg" alt="pistachio hummus">
+        <img src="https://www.allrecipes.com/thmb/mosdA6txKjRc0Sj7Y7Ma3Ti_DlU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/11680823_Pistachio-Hummus_TheDailyGourmet_4x3-c14ee4d7b54e43c1876ddd08ad3bf2e9.jpg" alt="pistachio hummus" width="400">
         <h2>Creamy hummus with a pistachio punch!</h2>
         <p>This pistachio hummus gives traditional hummus—a delicious, creamy, 
             and savory spread on its own—a unique texture and nutty flavor. Serve with your preferred dippers.
